aks/istio-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: loganalytics-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "<your-domain.com>"
    tls:
      httpsRedirect: true # forces HTTP to HTTPS
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "<your-domain.com>"
    tls:
      mode: SIMPLE
      credentialName: loganalytics-tls-secret # must be created in the same namespace as the ingress gateway (usually istio-system)

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loganalytics-vs
spec:
  hosts:
  - "<your-domain.com>"
  gateways:
  - loganalytics-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loganalytics-app-svc
        port:
          number: 8080
